# trackmate-embedding

./: app_factory.py  pyproject.toml
.github/workflows/: azure-container-webapp.yml
controllers/: embedding_controller.py
services/: embedding_service.py
tests/: test_embedding.py  test_neo4j.py
