[tool.poetry]
name = "trackmate embedding"
version = "0.1.0"
description = ""
authors = ["Oliver Hofmann"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.0"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
pydantic-settings = "^2.4.0"
python-multipart = "^0.0.9"
torchvision = "^0.19.0"


[tool.poetry.group.dev.dependencies]
neo4j = "^5.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
